--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,13 +22,11 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
-
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
+        <p class="view"><a href="{{ https://twitter.com/maxmnoll?lang=en }}">@maxmnoll</a></p>
+        <p>max.noll[at]jura.uni-goettingen.de</p>
+        <p>Institut für Völker- und Europarecht</p>
+        <p>Platz der Göttinger Sieben 5</p>
+        <p>37073 Göttingen</p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
