--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,11 +22,11 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p class="view"><a href="{{ https://twitter.com/maxmnoll?lang=en }}">@maxmnoll</a></p>
-        <p>max.noll[at]jura.uni-goettingen.de</p>
-        <p>Institut für Völker- und Europarecht</p>
-        <p>Platz der Göttinger Sieben 5</p>
-        <p>37073 Göttingen</p>
+        <p class="view"><a href="{{https://twitter.com/maxmnoll?lang=en}}">@maxmnoll</a>
+        max.noll[at]jura.uni-goettingen.de
+        Institut für Völker- und Europarecht
+        Platz der Göttinger Sieben 5
+        37073 Göttingen</p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
