--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,10 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p class="view"><a href="{{https://twitter.com/maxmnoll?lang=en}}">@maxmnoll</a>
-        max.noll[at]jura.uni-goettingen.de
-        Institut für Völker- und Europarecht
-        Platz der Göttinger Sieben 5
+        <p class="view"><a href="{{https://twitter.com/maxmnoll?lang=en}}">@maxmnoll</a></br>
+        max.noll[at]jura.uni-goettingen.de</br>
+        Institut für Völker- und Europarecht</br>
+        Platz der Göttinger Sieben 5</br>
         37073 Göttingen</p>
 
         {% if site.show_downloads %}
