--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p class="view"><a href="{{https://twitter.com/maxmnoll?lang=en}}">@maxmnoll</a></br>
+        <p class="view"><a href="https://twitter.com/maxmnoll?lang=en">@maxmnoll</a></br>
         max.noll[at]jura.uni-goettingen.de</br>
         Institut für Völker- und Europarecht</br>
         Platz der Göttinger Sieben 5</br>
