--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,13 +14,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1><a href="{{ "/" | absolute_url }}">Max Noll</a></h1>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <p>PhD-Student in Public International Law<br/>Berlin/Göttingen</p>
 
         <p class="view"><a href="https://twitter.com/maxmnoll?lang=en">@maxmnoll</a></br>
         max.noll[at]jura.uni-goettingen.de</br>
