--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>PhD-Student in Public International Law<br/>Berlin/Göttingen</p>
+        <p>PhD Student in Public International Law<br/>Berlin/Göttingen</p>
 
         <p class="view"><a href="https://twitter.com/maxmnoll?lang=en">@maxmnoll</a></br>
         max.noll[at]jura.uni-goettingen.de</br>
