--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -4,7 +4,7 @@
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-195045242-1', {'storage': 'none'} 'auto');
+ga('create', 'UA-195045242-1', {'storage': 'none'});
 ga('send', 'pageview');
 </script>
 <!-- End Google Analytics -->
