--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,7 @@
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "48f0bb69cf404c2a906bcb1d99750a26"}'></script>
 </script>
   </body>
 </html>
