--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         {% endif %}
 
         <p>PhD Student in Public International Law<br/>Heidelberg/Göttingen</p>
-        <p class="view"><a href="https://twitter.com/maxmnoll?lang=en">@maxmnoll</a></br>
+        <p class="view"><a href="https://bsky.app/profile/maxnoll.eu">@maxmnoll.eu</a></br>
         max.noll[at]jura.uni-goettingen.de</br>
         Institut für Völker- und Europarecht</br>
         Platz der Göttinger Sieben 5</br>
