--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>PhD Student in Public International Law<br/>Heidelberg/Göttingen</p>
+        <p>PhD Student in Public International Law<br/>Heidelberg/Göttingen<br/>Foto: MPIL</p>
         <p class="view"><a href="https://bsky.app/profile/maxnoll.eu">@maxmnoll.eu</a></br>
         max.noll[at]jura.uni-goettingen.de</br>
         Institut für Völker- und Europarecht</br>
