--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,10 @@
         max.noll[at]jura.uni-goettingen.de</br>
         Institut für Völker- und Europarecht</br>
         Platz der Göttinger Sieben 5</br>
-        37073 Göttingen</p>
+        37073 Göttingen</br></br>
+        Max-&shy;Planck-&shy;Inst&shy;itut für aus&shy;länd&shy;isches öffent&shy;lich&shy;es Recht und Völ&shy;ker&shy;recht</br>
+        Im Neuenheimer Feld 353</br>
+        69120 Heidelberg</p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
