--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,11 +24,7 @@
         <p class="view"><a href="https://bsky.app/profile/maxnoll.eu">@maxnoll.eu</a></br>
         max.noll[at]jura.uni-goettingen.de</br>
         Institut für Völker- und Europarecht</br>
-        Platz der Göttinger Sieben 5</br>
-        37073 Göttingen</br></br>
-        Max-&shy;Planck-&shy;Inst&shy;itut für aus&shy;länd&shy;isches öffent&shy;lich&shy;es Recht und Völ&shy;ker&shy;recht</br>
-        Im Neuenheimer Feld 353</br>
-        69120 Heidelberg</p>
+        Platz der Göttinger Sieben 5</p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
