--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,9 @@
         <p class="view"><a href="https://bsky.app/profile/maxnoll.eu">@maxnoll.eu</a></br>
         max.noll[at]jura.uni-goettingen.de</br>
         Institut für Völker- und Europarecht</br>
-        Platz der Göttinger Sieben 5</p>
+        Platz der Göttinger Sieben 5</br>
+        37073 Göttingen</br>
+        Germany</p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
